# fpgrowth-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: association-rules.rs  parallel.rs  simple.rs
src/: association_rules.rs  fpgrowth.rs  lib.rs  parallel_fpgrowth.rs
tests/: association_rules.rs  parallel.rs  single_threaded.rs
